[tool.poetry]
name = "gw-visualize-app"
version = "0.1.0"
description = ""
authors = ["seiya8 <seiya.sasa8@gmail.com>"]
readme = "README.md"
packages = [{include = "gw-visualize-app"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pycbc = "^2.2.0"
dash = "^2.9.3"
callbacks = "^0.3.0"
dash-bootstrap-components = "^1.4.1"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
